2025-06-20_generali_openshift/lab0/openshift/examples/route_http.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-http
spec:
  host: example-http.apps.training.germanywestcentral.aroapp.io
  to:
    kind: Service
    name: hello-world-clusterip
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
