2025-06-20_generali_openshift/lab0/openshift/examples/route_https_custom_cert.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-https-custom-cert
spec:
  host: example-https-custom-cert.openshift.sikademo.com
  to:
    kind: Service
    name: hello-world-clusterip
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN EC PRIVATE KEY-----
      MHcCAQEEIAsniCWU4x+VNs1NMHXZJ4inuO2j2072eKJy+dfXQw8voAoGCCqGSM49
[...]
      2oaFwgrvv4cmEDXfoR68pIMZvr85ASMDdw==
      -----END EC PRIVATE KEY-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDsTCCAzegAwIBAgISBuh1s+PDkuuQ2eKXBM4BwIMIMAoGCCqGSM49BAMDMDIx
[...]
      /ZWvv+ZjJb7bFI4WBYeF8KPwZ5nYVb44zAamPBSbUJYnmvdXbQ==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIEVzCCAj+gAwIBAgIRAIOPbGPOsTmMYgZigxXJ/d4wDQYJKoZIhvcNAQELBQAw
[...]
      VQD9F6Na/+zmXCc=
      -----END CERTIFICATE-----
